--- a/js/run/index.html
+++ b/js/run/index.html
@@ -41,12 +41,16 @@
     <br />
     <input id="km" class="long" type="number" step="0.01" min="0" max="18000" value="12.90" /> км/ч<br />
     <input id="m" class="long" type="number" step="0.01" min="0" max="5000" value="3.58" /> м/с<br />
-    <input id="hourTime" placeholder="час" type="number" /> :
+    <input id="hourTime" placeholder="час" type="number" min="0" max="99" value="00" /> :
     <input id="minTime" placeholder="мин" type="number" min="0" max="59" value="23" /> :
     <input id="secTime" placeholder="сек" type="number" min="0" max="59" value="15" />
     <br />
-    <input id="kmLength" class="long" type="number" value="5.00" step="0.01" /> км<br />
+
+    <input id="kmLengthId" class="long" type="number" value="5.00" step="0.01" /> км | <input id="elevId" class="long"
+      type="number" value="56" step="1" /> денив.<br />
     <input id="achievementId" class="long" type="number" value="58.21" step="0.01" />% в. п.<br />
+    <input id="realFlatDistId" class="long" type="number" value="5626.47" step="0.01" readonly /> м<br />
+    <input id="flatTimeId" class="long" type="text" value="" readonly /> на писта<br />
     <select id="ageId">
       <option value="0">Възр.</option>
       <option value="1">10÷14</option>
