alert for error, small changes

--- a/js/5kmrun/index.html
+++ b/js/5kmrun/index.html
@@ -17,7 +17,8 @@
     }
 
     input,
-    select {
+    select,
+    button {
       margin-bottom: 6px;
     }
 
@@ -35,9 +36,15 @@
 
     input[type="checkbox"] {
       width: auto;
+      transform: scale(2.2);
+      margin-left: 1.2em;
+    }
+
+    /* input[type="checkbox"] {
+      width: auto;
       transform: scale(2);
       margin: 1em 1em 1em 1em;
-    }
+    } */
   </style>
 </head>
 
