--- a/js/5kmrun/index.html
+++ b/js/5kmrun/index.html
@@ -30,6 +30,10 @@
       width: 8ch;
     }
 
+    .toLong {
+      width: 36ch;
+    }
+
     button {
       cursor: pointer;
     }
@@ -88,9 +92,10 @@
     </select> -->
     <br />
     <input id="achievementId" class="long" type="number" value="58.21" step="0.01" />% в. п.<br />
+    <input id="levelId" class="toLong" type="text" value="Среден" readonly /><br />
     <input id="elevId" class="long" type="number" value="56" step="1" /> денив./изк. <button id="helpProfileTrackId"
       class="help">?</button><br />
-    <input id="realFlatDistId" class="long" type="number" value="5626" step="1" readonly /> м равна писта<br />
+    <input id="realFlatDistId" class="long" type="number" value="5626" step="1" /> м равна писта<br />
     <input id="flatTimeId" class="long" type="text" value="" readonly /> на писта<br />
 
     <input id="m" class="long" type="number" step="0.01" min="0" max="5000" value="3.58" /> м/с<br />
