--- a/js/5kmrun/index.html
+++ b/js/5kmrun/index.html
@@ -31,7 +31,7 @@
     }
 
     .toLong {
-      width: 36ch;
+      width: 26ch;
     }
 
     button {
@@ -93,6 +93,7 @@
     <br />
     <input id="achievementId" class="long" type="number" value="58.21" step="0.01" />% в. п.<br />
     <input id="levelId" class="toLong" type="text" value="Среден" readonly /><br />
+    <input id="levelId2" class="toLong" type="text" value="Среден" readonly /><br />
     <input id="elevId" class="long" type="number" value="56" step="1" /> денив./изк. <button id="helpProfileTrackId"
       class="help">?</button><br />
     <input id="realFlatDistId" class="long" type="number" value="5626" step="1" /> м равна писта<br />
