--- a/js/5kmrun/index.html
+++ b/js/5kmrun/index.html
@@ -91,7 +91,9 @@
     <input id="sec" placeholder="сек" type="number" min="0" max="59" value="39" />с/км темпо
     <br />
     <input id="km" class="long" type="number" step="0.01" min="0" max="18000" value="12.90" /> км/ч<br />
-    <input id="achievementId" class="long" type="number" value="58.21" step="0.01" />% в. п.<br />
+    Възрастово постижение <button id="helpAchievementsId" class="help">?</button><br />
+    <input id="achievementId" class="long" type="number" value="58.21" step="0.01" />% ÷ <input id="achievementMaxId"
+      class="long" type="number" value="" step="0.01" />%<br />
     <span>Ниво: </span><button id="helpLevelsId" class="help">?</button><br />
     <input id="levelId" class="toLong" type="text" value="Среден" readonly /><br />
     <input id="levelId2" class="toLong" type="text" value="Среден" readonly /><br />
