--- a/js/5kmrun/index.html
+++ b/js/5kmrun/index.html
@@ -8,7 +8,7 @@
   <script defer src="app.js"></script>
   <title>Търчане с 5kmrun – калкулатор</title>
   <meta name="description"
-    content="Калкулатор в помощ на бегачите от 5kmrun – време, темпо, скорост, възрастово постижение, поправка за изкачванията." />
+    content="Калкулатор в помощ на бегач(к)ите от 5kmrun – време, темпо, скорост, възрастово постижение, поправка за изкачванията." />
 
   <style>
     * {
@@ -60,12 +60,14 @@
     <input id="secTime" placeholder="сек" type="number" min="0" max="59" value="15" />с време
     <br />
     <select id="tracksId" class="toLong">
-      <option id="flatId" value="5000">Избери трасе ...</option>
+      <option value="5000">Избери трасе ...</option>
+      <option id="flatId" value="5000">Равна писта</option>
       <option id="realZapaden2Id" value="5444">„Западен парк 2“, гр. София</option>
-      <option id="realBorisovaId" value="5238">„Борисова градина“, гр. София</option>
+      <option id="realBorisovaId" value="5364">„Борисовата градина“, гр. София</option>
+      <option id="realYuzhenId" value="5238">„Южен парк“, гр. София</option>
       <option id="realVarnaId" value="5182">„Морска градина“, гр. Варна</option>
       <option id="realBurgasId" value="5158">„Морска градина“, гр. Бургас</option>
-      <option id="realPlovdivId" value="5087">„Гребен канал 2“, гр. Пловдив</option>
+      <option id="realPlovdivId" value="5008">„Гребен канал 2“, гр. Пловдив</option>
     </select><br />
     <select id="ageId">
       <option value="0">Възр.</option>
@@ -95,6 +97,7 @@
     <input id="achievementId" class="long" type="number" value="58.21" step="0.01" />% ÷ <input id="achievementMaxId"
       class="long" type="number" value="" step="0.01" />%<br />
     <span>Ниво: </span><button id="helpLevelsId" class="help">?</button><br />
+    <input id="percentFastestId" class="toLong" type="text" value="" readonly /><br />
     <input id="levelId" class="toLong" type="text" value="Среден" readonly /><br />
     <input id="levelId2" class="toLong" type="text" value="Среден" readonly /><br />
     <input id="elevId" class="long" type="number" value="56" step="1" /> денив./изк. <button id="helpProfileTrackId"
@@ -102,7 +105,8 @@
     <input id="realFlatDistId" class="long" type="number" value="5626" step="1" /> м равна писта<br />
     <input id="flatTimeId" class="long" type="text" value="" readonly /> на писта<br />
     <input id="zapaden2TimeId" class="long" type="text" value="" readonly /> в Западен 2<br />
-    <input id="borisovaTimeId" class="long" type="text" value="" readonly /> в Борисова<br />
+    <input id="borisovaTimeId" class="long" type="text" value="" readonly /> в Борисовата<br />
+    <input id="yuzhenTimeId" class="long" type="text" value="" readonly /> в Южен<br />
     <input id="varnaTimeId" class="long" type="text" value="" readonly /> във Варна<br />
     <input id="burgasTimeId" class="long" type="text" value="" readonly /> в Бургас<br />
     <input id="plovdivTimeId" class="long" type="text" value="" readonly /> в Пловдив<br />
