info, bugs, links

--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -53,7 +53,7 @@
 </head>
 
 <body>
-  <h1>Търчане с <a href="https://5kmrun.bg/" title="Свободно, но организирано бягане ...">5kmrun</a></h1>
+  <h1 id="up">Търчане с <a href="https://5kmrun.bg/" title="Свободно, но организирано бягане ...">5kmrun</a></h1>
   <form id="run">
     <input id="hourTime" placeholder="час" type="number" min="0" max="99" value="00" />ч
     <input id="minTime" placeholder="мин" type="number" min="0" max="59" value="23" />м
@@ -119,7 +119,19 @@
     <button id="clearId">Начални</button>
     <button id="loadId">Зареди</button>
   </form>
-  <footer>в. 0.0.1</footer>
+  <details closed>
+    <summary>Инфо, сътрудници, бъгове</summary>
+    <p>Калкулатора е в начална фаза на разработка и не всички функции работят точно!</p>
+    <p>Основния проблем е как да се определят трудностите на отделните трасета. Текущия ми подход е това да стане само и единствено по профила на трасето – денивелация, сумарни изкачвания и спускания, средния наклон на изкачванията и спусканията и максималния наклон. Последното е важно, защото на трасе „Западен парк 2“ има спускане с голям наклон и малък процент от изкачването може да се компенсира.</p>
+    <p>Съществува проблем със снемането на профила на трасето, понеже различните приложения дават различни данни. Очаквам предложения за „идеалното“ приложение или метод за снемане на профила, който не изисква много пари, защото се надявам, че доброволци ще се намерят!</p>
+   <p>Друг подход е да се вземе средното време от рекордите на избрана група от участници, особено на тези, които са търчали по всички трасета.<p> 
+    <p>Очаквам всякакви предложения, вкл. формули, каква извадка от бегач(к)и да се ползва и пр.<p>
+    <ul>
+    <li><a href="https://github.com/dabidesh/homeworks/tree/master/js/5kmrunCalc" >GitHub папка</a></li>
+    <li><a href="https://downgit.github.io/#/home?url=https://github.com/dabidesh/homeworks/tree/master/js/5kmrunCalc" >Препратка за източване</a></li>
+    </ul>
+  </details>
+  <footer>5kmrunCalc в. 0.0.1 <a href="#up" >↑ Най-горе</a></footer>
 </body>
 
 </html>
