--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -18,7 +18,8 @@
 
     input,
     select,
-    button {
+    button,
+    li {
       margin-bottom: 6px;
     }
 
@@ -34,7 +35,7 @@
       width: 26ch;
     }
 
-    button {
+    button, summary {
       cursor: pointer;
     }
 
@@ -131,7 +132,7 @@
     <li><a href="https://downgit.github.io/#/home?url=https://github.com/dabidesh/homeworks/tree/master/js/5kmrunCalc" >Препратка за източване</a></li>
     </ul>
   </details>
-  <footer>5kmrunCalc в. 0.0.1 <a href="#up" >↑ Най-горе</a></footer>
+  <footer>5kmrunCalc в. 0.0.1 <br /><a href="#up" >↑ Най-горе</a></footer>
 </body>
 
 </html>
