--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -35,7 +35,8 @@
       width: 26ch;
     }
 
-    button, summary {
+    button,
+    summary {
       cursor: pointer;
     }
 
@@ -96,7 +97,7 @@
     <input id="km" class="long" type="number" step="0.01" min="0" max="18000" value="12.90" /> км/ч<br />
     Възрастово постижение <button id="helpAchievementsId" class="help">?</button><br />
     <input id="achievementId" class="long" type="number" value="58.21" step="0.01" />% ÷ <input id="achievementMaxId"
-      class="long" type="number" value="" step="0.01" />%<br />
+      class="long" type="number" value="" readonly />%<br />
     <span>Ниво: </span><button id="helpLevelsId" class="help">?</button><br />
     <input id="percentFastestId" class="toLong" type="text" value="" readonly /><br />
     <input id="levelId" class="toLong" type="text" value="Среден" readonly /><br />
@@ -123,16 +124,26 @@
   <details closed>
     <summary>Инфо, сътрудници, бъгове</summary>
     <p>Калкулатора е в начална фаза на разработка и не всички функции работят точно!</p>
-    <p>Основния проблем е как да се определят трудностите на отделните трасета. Текущия ми подход е това да стане само и единствено по профила на трасето – денивелация, сумарни изкачвания и спускания, средния наклон на изкачванията и спусканията и максималния наклон. Последното е важно, защото на трасе „Западен парк 2“ има спускане с голям наклон и малък процент от изкачването може да се компенсира.</p>
-    <p>Съществува проблем със снемането на профила на трасето, понеже различните приложения дават различни данни. Очаквам предложения за „идеалното“ приложение или метод за снемане на профила, който не изисква много пари, защото се надявам, че доброволци ще се намерят!</p>
-   <p>Друг подход е да се вземе средното време от рекордите на избрана група от участници, особено на тези, които са търчали по всички трасета.<p> 
-    <p>Очаквам всякакви предложения, вкл. формули, каква извадка от бегач(к)и да се ползва и пр.<p>
+    <p>Основния проблем е как да се определят трудностите на отделните трасета. Текущия ми подход е това да стане само и
+      единствено по профила на трасето – денивелация, сумарни изкачвания и спускания, средния наклон на изкачванията и
+      спусканията и максималния наклон. Последното е важно, защото на трасе „Западен парк 2“ има спускане с голям наклон
+      и малък процент от изкачването може да се компенсира.</p>
+    <p>Съществува проблем със снемането на профила на трасето, понеже различните приложения дават различни данни.
+      Очаквам предложения за „идеалното“ приложение или метод за снемане на профила, който не изисква много пари, защото
+      се надявам, че доброволци ще се намерят!</p>
+    <p>Друг подход е да се вземе средното време от рекордите на избрана група от участници, особено на тези, които са
+      търчали по всички трасета.
+    <p>
+    <p>Очаквам всякакви предложения, вкл. формули, каква извадка от бегач(к)и да се ползва и пр.
+    <p>
     <ul>
-    <li><a href="https://github.com/dabidesh/homeworks/tree/master/js/5kmrunCalc" >GitHub папка</a></li>
-    <li><a href="https://downgit.github.io/#/home?url=https://github.com/dabidesh/homeworks/tree/master/js/5kmrunCalc" >Препратка за източване</a></li>
+      <li><a href="https://github.com/dabidesh/homeworks/tree/master/js/5kmrunCalc">GitHub папка</a></li>
+      <li><a
+          href="https://downgit.github.io/#/home?url=https://github.com/dabidesh/homeworks/tree/master/js/5kmrunCalc">Препратка
+          за източване</a></li>
     </ul>
   </details>
-  <footer>5kmrunCalc в. 0.0.1 <br /><a href="#up" >↑ Най-горе</a></footer>
+  <footer>5kmrunCalc в. 0.0.1 <br /><a href="#up">↑ Най-горе</a></footer>
 </body>
 
 </html>
