--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -121,9 +121,13 @@
     <button id="clearId">Начални</button>
     <button id="loadId">Зареди</button>
   </form>
-  <details closed>
-    <summary>Инфо, сътрудници, бъгове</summary>
+  <details id="detailsId" closed>
+    <summary id="summaryId">Инфо, сътрудници, бъгове</summary>
     <p>Калкулатора е в начална фаза на разработка и не всички функции работят точно!</p>
+    <p>Променяйки всяко едно от полетата – време, трасе, възрастова група, пол, темо, средна скорост, възрастово
+      постижение (на база времето без да се отчита трудността на трасето – това е минималното възрастово постижение),
+      оценка на трудността на трасето (денивелация, изкачвания), дължина на изчислената равна писта, се променят
+      останалите полета. В бъдеще ще могат да се променят всички полета.</p>
     <p>Основния проблем е как да се определят трудностите на отделните трасета. Текущия ми подход е това да стане само и
       единствено по профила на трасето – денивелация, сумарни изкачвания и спускания, средния наклон на изкачванията и
       спусканията и максималния наклон. Последното е важно, защото на трасе „Западен парк 2“ има спускане с голям наклон
@@ -134,14 +138,20 @@
     <p>Друг подход е да се вземе средното време от рекордите на избрана група от участници, особено на тези, които са
       търчали по всички трасета.
     <p>
-    <p>Очаквам всякакви предложения, вкл. формули, каква извадка от бегач(к)и да се ползва и пр.
+    <p>Очаквам всякакви предложения, вкл. формули, каква извадка от бегач(к)и да се ползва и пр. и сигнали за бъгове!
     <p>
     <ul>
       <li><a href="https://github.com/dabidesh/homeworks/tree/master/js/5kmrunCalc">GitHub папка</a></li>
       <li><a
           href="https://downgit.github.io/#/home?url=https://github.com/dabidesh/homeworks/tree/master/js/5kmrunCalc">Препратка
           за източване</a></li>
+      <li><a href="https://www.facebook.com/Plamen.Prodanov.Dabidabidesh/">Фейсбук</a></li>
+      <li><a href="https://www.strava.com/athletes/82041883">Страва</a></li>
+      <li><a href="mailto:bradata666@gmail.com?subject=5kmrunCalc" title="Изпрати имейл до Брадата">Имейл:
+          bradata666@gmail.com</a>
+      </li>
     </ul>
+    <button onclick="summaryId.click();">Сгъни</button>
   </details>
   <footer>5kmrunCalc в. 0.0.1 <br /><a href="#up">↑ Най-горе</a></footer>
 </body>
