update meta description

--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -7,8 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script defer src="app.js"></script>
   <title>Търчане с 5kmrun – калкулатор</title>
-  <meta name="description"
-    content="Калкулатор в помощ на бегач(к)ите от 5kmrun – време, темпо, скорост, възрастово постижение, поправка за изкачванията." />
+  <meta name="description" content="В помощ на бегач(к)ите от 5kmrun – 
+  време, темпо, 
+    скорост, възрастово постижение, ниво - процент от бегач(к)ите, 
+    поправка за различните трасета." />
 
   <style>
     * {
@@ -45,12 +47,6 @@
       transform: scale(2.2);
       margin-left: 1.2em;
     }
-
-    /* input[type="checkbox"] {
-      width: auto;
-      transform: scale(2);
-      margin: 1em 1em 1em 1em;
-    } */
   </style>
 </head>
 
