small and validate

--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -8,7 +8,7 @@
   <script defer src="app.js"></script>
   <title>Търчане с 5kmrun – калкулатор</title>
   <meta name="description" content="В помощ на бегач(к)ите от 5kmrun – 
-  време, темпо, 
+  време, трасета, възсрастова група, пол, темпо, 
     скорост, възрастово постижение, ниво - процент от бегач(к)ите, 
     поправка за различните трасета." />
 
@@ -117,7 +117,7 @@
     <button id="clearId">Начални</button>
     <button id="loadId">Зареди</button>
   </form>
-  <details id="detailsId" closed>
+  <details id="detailsId" open>
     <summary id="summaryId">Инфо, сътрудници, бъгове</summary>
     <p>Калкулатора е в начална фаза на разработка и не всички функции работят точно!</p>
     <p>Променяйки всяко едно от полетата – време, трасе, възрастова група, пол, темо, средна скорост, възрастово
@@ -133,9 +133,9 @@
       се надявам, че доброволци ще се намерят!</p>
     <p>Друг подход е да се вземе средното време от рекордите на избрана група от участници, особено на тези, които са
       търчали по всички трасета.
-    <p>
+    </p>
     <p>Очаквам всякакви предложения, вкл. формули, каква извадка от бегач(к)и да се ползва и пр. и сигнали за бъгове!
-    <p>
+    </p>
     <ul>
       <li><a href="https://github.com/dabidesh/homeworks/tree/master/js/5kmrunCalc">GitHub папка</a></li>
       <li><a
