--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -109,7 +109,7 @@
     <input id="burgasTimeId" class="long" type="text" value="" readonly /> в Бургас<br />
     <input id="plovdivTimeId" class="long" type="text" value="" readonly /> в Пловдив<br />
 
-    <input id="m" class="long" type="number" step="0.01" min="0" max="5000" value="3.58" /> м/с<br />
+    <input id="m" class="long" type="number" step="0.01" min="0" max="5000" value="3.58" readonly /> м/с<br />
 
     <input id="kmLengthId" class="long" type="number" value="5.00" step="0.01" readonly /> км<br />
 
@@ -124,20 +124,22 @@
       постижение (на база времето без да се отчита трудността на трасето – това е минималното възрастово постижение),
       оценка на трудността на трасето (денивелация, изкачвания), дължина на изчислената равна писта, се променят
       останалите полета. В бъдеще ще могат да се променят всички полета.</p>
-    <p>Основния проблем е как да се определят трудностите на отделните трасета. Текущия ми подход е това да стане само и
-      единствено по профила на трасето – денивелация, сумарни изкачвания и спускания, средния наклон на изкачванията и
+    <p>Основния проблем е как да се определят трудностите на отделните трасета. Текущия ми подход е това да стане
+      <strong>само и
+        единствено по профила на трасето</strong> – денивелация, сумарни изкачвания и спускания, средния наклон на
+      изкачванията и
       спусканията и максималния наклон. Последното е важно, защото на трасе „Западен парк 2“ има спускане с голям наклон
       и малък процент от изкачването може да се компенсира.</p>
     <p>Съществува проблем със снемането на профила на трасето, понеже различните приложения дават различни данни.
       Очаквам предложения за „идеалното“ приложение или метод за снемане на профила, който не изисква много пари, защото
       се надявам, че доброволци ще се намерят!</p>
     <p>Друг подход е да се вземе средното време от рекордите на избрана група от участници, особено на тези, които са
-      търчали по всички трасета.
+      търчали по всички трасета, <strong>включително равна писта</strong>.
     </p>
     <p>Очаквам всякакви предложения, вкл. формули, каква извадка от бегач(к)и да се ползва и пр. и сигнали за бъгове!
     </p>
     <ul>
-      <li><a href="https://github.com/dabidesh/homeworks/tree/master/js/5kmrunCalc">GitHub папка</a></li>
+      <li><a href="https://github.com/dabidesh/homeworks/tree/master/js/5kmrunCalc">Гитхъб директория</a></li>
       <li><a
           href="https://downgit.github.io/#/home?url=https://github.com/dabidesh/homeworks/tree/master/js/5kmrunCalc">Препратка
           за източване</a></li>
