border cases achivement bug

--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -47,6 +47,10 @@
       transform: scale(2.2);
       margin-left: 1.2em;
     }
+
+    a {
+      text-decoration: none;
+    }
   </style>
 </head>
 
@@ -129,7 +133,8 @@
         единствено по профила на трасето</strong> – денивелация, сумарни изкачвания и спускания, средния наклон на
       изкачванията и
       спусканията и максималния наклон. Последното е важно, защото на трасе „Западен парк 2“ има спускане с голям наклон
-      и малък процент от изкачването може да се компенсира.</p>
+      и малък процент от изкачването може да се компенсира.
+    </p>
     <p>Съществува проблем със снемането на профила на трасето, понеже различните приложения дават различни данни.
       Очаквам предложения за „идеалното“ приложение или метод за снемане на профила, който не изисква много пари, защото
       се надявам, че доброволци ще се намерят!</p>
