--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -216,7 +216,7 @@
       действителната
       формулите не важат!</p>
 
-    <p>Съществуват функционални тесове за определяне на
+    <p>Съществуват функционални тестове за определяне на
       работния/максималния пулс.</p>
     <button onclick="summaryPulsId.click();">Сгъни</button>
   </details>
