--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -101,6 +101,7 @@
       <option value="0.6">60%</option>
       <option value="0.7">70%</option>
       <option value="0.8">80%</option>
+      <option value="0.85">85%</option>
       <option value="0.9">90%</option>
       <option value="1">100%</option>
     </select>
