onload set from storage

--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script defer src="app.js"></script>
+  <script defer src="app.js?v=2"></script>
   <title>Търчане с 5kmrun – калкулатор</title>
   <meta name="description" content="В помощ на бегач(к)ите от 5kmrun – 
   време, трасета, възсрастова група, пол, темпо, 
@@ -105,7 +105,7 @@
       <option value="0.9">90%</option>
       <option value="1">100%</option>
     </select>
-    <label for="RHR">Пулс </label><input id="RHR" placeholder="пулс" type="number" min="0" max="200" value="58" />
+    <label for="restHR">Пулс </label><input id="restHR" placeholder="пулс" type="number" min="0" max="200" value="58" />
     <br />
     <input id="workRateId" class="long" type="text" value="" />
     удара/мин <button id="helpPulsId" class="help">?</button><br />
