add calculateHeartRates everywhere

--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script defer src="app.js?v=2"></script>
+  <script defer src="app.js?v=3"></script>
   <title>Търчане с 5kmrun – калкулатор</title>
   <meta name="description" content="В помощ на бегач(к)ите от 5kmrun – 
   време, трасета, възсрастова група, пол, темпо, 
@@ -197,7 +197,7 @@
     <p><strong>Консултирайте се с лекар!</strong></p>
 
     <p>Работния пулс за търчане на 5 км трябва да бъде в аеробната зона,
-      ако искаш постижението ти да бъде силно (60÷85
+      ако искаш постижението ти да бъде силно, но и безопасно (60÷85
       % от
       максималния, според други източници 60÷80 %).</p>
 
