--- a/js/boilerPlateCode/basic.html
+++ b/js/boilerPlateCode/basic.html
@@ -39,20 +39,25 @@
   <textarea id="inn" height="800px"></textarea>
   <span>
     <button id="button">=></button>
-    <button onclick="this.parentElement.previousElementSibling.value='';">C</button>
-    <!-- inn.value=out.value=''; -->
+    <button>C</button>
   </span>
   <textarea id="out"></textarea>
   <br />
 
   <p>a=>'a': 'a',</p>
   <textarea id="in0" height="800px"></textarea>
-  <button id="button0">=></button>
+  <span>
+    <button id="button0">=></button>
+    <button>C</button>
+  </span>
   <textarea id="out0"></textarea><br />
 
   <p>a b=>'a': 'b',</p>
   <textarea id="in1" height="800px"></textarea>
-  <button id="button1">=></button>
+  <span>
+    <button id="button1">=></button>
+    <button>C</button>
+  </span>
   <textarea id="out1"></textarea>
 </body>
 
