--- a/js/boilerPlateCode/basic.html
+++ b/js/boilerPlateCode/basic.html
@@ -16,11 +16,35 @@
       cursor: pointer;
     }
 
-    input,
     textarea,
     button {
       background-color: #222;
       color: #ccc;
+    }
+
+    .dark {
+      background-color: #fff;
+      color: #000;
+    }
+
+    input[type="checkbox"] {
+      /* background-color: #fff;
+      color: #000;
+      display: grid;
+      place-content: center; */
+    }
+
+    input[type="checkbox"]:before {
+      content: "";
+      width: 0.95em;
+      height: 0.95em;
+      transform: scale(0);
+      transition: 120ms transform ease-in-out;
+      box-shadow: inset 1em 1em red;
+    }
+
+    input[type="checkbox"]:checked::before {
+      transform: scale(1);
     }
 
     textarea {
@@ -35,7 +59,12 @@
 </head>
 
 <body>
+  <!-- <form name="form"> -->
   <p>a=>'a',</p>
+  <p>
+    <label for="checkbox">trim inputs</label>
+    <input type="checkbox" id="checkbox" checked />
+  </p>
   <textarea id="inn" height="800px"></textarea>
   <span>
     <button id="button">=></button>
@@ -43,6 +72,7 @@
   </span>
   <textarea id="out"></textarea>
   <br />
+  <!-- </form> -->
 
   <p>a=>'a': 'a',</p>
   <textarea id="in0" height="800px"></textarea>
