--- a/js/boilerPlateCode/basic.html
+++ b/js/boilerPlateCode/basic.html
@@ -59,20 +59,20 @@
 </head>
 
 <body>
-  <!-- <form name="form"> -->
-  <p>a=>'a',</p>
-  <p>
-    <label for="checkbox">trim inputs</label>
-    <input type="checkbox" id="checkbox" checked />
-  </p>
-  <textarea id="inn" height="800px"></textarea>
-  <span>
-    <button id="button">=></button>
-    <button>C</button>
-  </span>
-  <textarea id="out"></textarea>
-  <br />
-  <!-- </form> -->
+  <form name="form">
+    <p>a=>'a',</p>
+    <p>
+      <label for="checkbox">trim inputs</label>
+      <input type="checkbox" id="checkbox" name="checkbox" checked />
+    </p>
+    <textarea id="inn" height="800px"></textarea>
+    <span>
+      <button type="button" id="button">=></button>
+      <button type="button">C</button>
+    </span>
+    <textarea id="out"></textarea>
+    <br />
+  </form>
 
   <p>a=>'a': 'a',</p>
   <textarea id="in0" height="800px"></textarea>
