--- a/js/boilerPlateCode/spiral-matrix.html
+++ b/js/boilerPlateCode/spiral-matrix.html
@@ -86,6 +86,14 @@
     <button>C</button>
   </span>
   <textarea id="out0"></textarea><br />
+
+  <p>return aiaj</p>
+  <textarea id="in1" height="800px"></textarea>
+  <span>
+    <button id="button1">=></button>
+    <button>C</button>
+  </span>
+  <textarea id="out1"></textarea><br />
 </body>
 
 </html>
