selected/checked switch

--- a/js/boilerPlateCode/index.html
+++ b/js/boilerPlateCode/index.html
@@ -30,6 +30,14 @@
   <button id="button0">=></button>
   <textarea id="outC" class="out"></textarea>
   <textarea id="outHBS" class="out"></textarea>
+  <label for="checkbox">selected/checked</label>
+  <input type="checkbox" id="checkbox" name="checkbox" checked />
+
+  <p>
+    input type="checkbox/radio" => checked
+    select.option => selected
+  </p>
+
 </body>
 
 </html>
