--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script defer src="app.js?v=4"></script>
   <title>Търчане с 5kmrun – калкулатор</title>
-  <meta name="description" content="В помощ на бегач(к)ите от 5kmrun – 
-  време, трасета, възсрастова група, пол, темпо, 
-    скорост, възрастово постижение, ниво - процент от бегач(к)ите, 
+  <meta name="description" content="В помощ на бегач(к)ите от 5kmrun –
+  време, трасета, възсрастова група, пол, темпо,
+    скорост, възрастово постижение, ниво - процент от бегач(к)ите,
     поправка за различните трасета, пулс." />
 
   <style>
@@ -139,7 +139,7 @@
     <input id="sec" placeholder="сек" type="number" min="0" max="59" value="39" />с/км темпо
     <br />
     <input id="km" class="long" type="number" step="0.01" min="0" max="18000" value="12.90" /> км/ч<br />
-    Възрастово постижение <button id="helpAchievementsId" class="help">?</button><br />
+    Възрастово постижение <button data-open-modal-helpAchievement id="helpAchievementsId" class="help">?</button><br />
     <input id="achievementId" class="long" type="number" value="58.21" step="0.01" />% ÷ <input id="achievementMaxId"
       class="long" type="number" value="" readonly />%<br />
     <span>Ниво: </span><button id="helpLevelsId" class="help">?</button><br />
@@ -289,6 +289,15 @@
     <button onclick="summaryFormulaId.click();">Сгъни</button>
   </details>
   <footer>5kmrunCalc в. 0.0.1 <br /><a href="#up">↑ Най-горе</a></footer>
+
+  <dialog data-modal-helpAchievement>
+    <button data-close-modal-helpAchievement>X</button>
+    <p>Възрастовото постижение е процента от световния рекорд в съответната възрастова група.</p>
+
+    <p>Внимание – недовършена функционалност, втората стойност е на база удължено трасе към равна писта, т.е. взима се
+      времето
+      от пистата!</p>
+  </dialog>
 </body>
 
 </html>
